--- a/index.html
+++ b/index.html
@@ -1,18 +1,30 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Formadores</title>
 </head>
+
 <body>
-    
-    \\titulo da pagina\\
-<header>ANIMES</header> 
-#texto#
-<h1> NARUTO  </h1>
-#parágrafo# 
-<p> #ROCK LEE VS GAARA </p>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/ihgWUo6tvJQ?si=lRxQ2IDVYdf1xm81" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <section>
+        <div>
+            \\titulo da pagina\\
+            <header>ANIMES</header>
+            #texto#
+            <h1> NARUTO </h1>
+            #parágrafo#
+            <p> #ROCK LEE VS GAARA </p>
+        </div>
+        <div>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/ihgWUo6tvJQ?si=lRxQ2IDVYdf1xm81"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+    </section>
 </body>
+
 </html>
