--- a/index.html
+++ b/index.html
@@ -5,18 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="style.css">    
-<title>Formadores</title>
+<title>ANIMES</title>
 </head>
 
 <body>
     <section>
         <div>
-            <header>ANIMES</header>
             <h1> NARUTO </h1>
             <p> #ROCK LEE VS GAARA </p>
         </div>
         <div>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/ihgWUo6tvJQ?si=lRxQ2IDVYdf1xm81"
+            <iframe width="50" height="40" src="https://www.youtube.com/embed/ihgWUo6tvJQ?si=lRxQ2IDVYdf1xm81"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
