--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
     <section>
         <div>
-            <h1> NARUTO </h1>
-            <p> #ROCK LEE VS GAARA </p>
+        
+           
         </div>
         <div>
             <iframe width="50" height="40" src="https://www.youtube.com/embed/ihgWUo6tvJQ?si=lRxQ2IDVYdf1xm81"
@@ -21,6 +21,12 @@
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
     </section>
+
+<section>
+    <h1> NARUTO </h1>
+    <div class= "categoria-episodios">
+    </section>
+
 </body>
 
 </html>
