--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
 <section>   
     <h1> NARUTO </h1>
     <div class= "categoria-episodios">
+
+        <a href="https://www.youtube.com/watch?v=An1ZrG0mbf4"></a>
+        <a href="https://www.youtube.com/watch?v=kJ7KbA6Si4Y"></a>
     </section>
-    
+
 <body>
     <section>
         <div>
