--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
     <div class= "categoria-episodios">
 
         <a href="https://www.youtube.com/watch?v=An1ZrG0mbf4"></a>
+        <img src="https://images.app.goo.gl/4s7k66iibkXdTyY49" alt="">
         <a href="https://www.youtube.com/watch?v=kJ7KbA6Si4Y"></a>
+        <a href="https://www.youtube.com/watch?v=KeUQ074rURQ"></a>
+        <a href="https://www.youtube.com/watch?v=htFwqzVdJBs"></a>
+        <a href="https://www.youtube.com/watch?v=Cft4X30R45k"></a>
+
     </section>
 
 <body>
