--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <a href="https://www.youtube.com/watch?v=An1ZrG0mbf4"></a>
         <img src="https://images.app.goo.gl/4s7k66iibkXdTyY49" alt="">
         <a href="https://www.youtube.com/watch?v=kJ7KbA6Si4Y"></a>
+        <img src="https://img.youtube.com/vi/LINK_AQUI/maxresdefault.jpg" alt="">
         <a href="https://www.youtube.com/watch?v=KeUQ074rURQ"></a>
         <a href="https://www.youtube.com/watch?v=htFwqzVdJBs"></a>
         <a href="https://www.youtube.com/watch?v=Cft4X30R45k"></a>
