--- a/index.html
+++ b/index.html
@@ -13,16 +13,21 @@
 <section>   
     <h1> NARUTO </h1>
     <div class= "categoria-episodios">
-        <a href="https://www.youtube.com/watch?v=An1ZrG0mbf4"></a>
+        <a href="https://www.youtube.com/watch?v=An1ZrG0mbf4">
         <img src="https://img.youtube.com/vi/An1ZrG0mbf4/maxresdefault.jpg" alt="">
-        <a href="https://www.youtube.com/watch?v=kJ7KbA6Si4Y"></a>
+    </a>
+        <a href="https://www.youtube.com/watch?v=kJ7KbA6Si4Y">
         <img src="https://img.youtube.com/vi/kJ7KbA6Si4Y/maxresdefault.jpg" alt="">
-        <a href="https://www.youtube.com/watch?v=KeUQ074rURQ"></a>
+    </a>
+        <a href="https://www.youtube.com/watch?v=KeUQ074rURQ">
         <img src="https://img.youtube.com/vi/KeUQ074rURQ/maxresdefault.jpg" alt="">
-        <a href="https://www.youtube.com/watch?v=htFwqzVdJBs"></a>
+    </a>
+        <a href="https://www.youtube.com/watch?v=htFwqzVdJBs">
         <img src="https://img.youtube.com/vi/htFwqzVdJBs/maxresdefault.jpg" alt="">
-        <a href="https://www.youtube.com/watch?v=Cft4X30R45k"></a>
+    </a>
+        <a href="https://www.youtube.com/watch?v=Cft4X30R45k">
         <img src="https://img.youtube.com/vi/Cft4X30R45k/maxresdefault.jpg" alt="">
+    </a>
 
     </section>
 
