--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <a href="https://www.youtube.com/watch?v=kJ7KbA6Si4Y">
         <img src="https://img.youtube.com/vi/kJ7KbA6Si4Y/maxresdefault.jpg" alt="">
     </a>
-        <a href="https://www.youtube.com/watch?v=KeUQ074rURQ">
-        <img src="https://img.youtube.com/vi/KeUQ074rURQ/maxresdefault.jpg" alt="">
+        <a href="https://youtu.be/KeUQ074rURQ?si=cwF08RcSDxbb7O_m">
+        <img src="https://img.youtube.com/vi/cwF08RcSDxbb7O_m/maxresdefault.jpg" alt="">
     </a>
         <a href="https://www.youtube.com/watch?v=htFwqzVdJBs">
         <img src="https://img.youtube.com/vi/htFwqzVdJBs/maxresdefault.jpg" alt="">
